<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".home.MainActivity">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/tv2"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/logo"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/lb_multi_lang"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_launcher_background" />

    <Button
        android:id="@+id/summarizeBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/maroon"
        android:onClick="summarize"
        android:text="@string/lb_summarize"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/about"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="wrap_content"
        android:layout_below="@+id/summarizeBtn"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:onClick="about"
        android:layout_marginTop="20dp"
        android:background="@color/blue" />

    <Button
        android:id="@+id/help"
        android:layout_width="?attr/actionBarSize"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:onClick="faq"
        android:layout_below="@+id/summarizeBtn"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:background="@color/green" />
</RelativeLayout>