<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/headerView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/textTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_text_border"
            android:paddingEnd="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingStart="2dp"
            tools:ignore="RtlSymmetry">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/text_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lb_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/maroon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fileTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingStart="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/file_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lb_file"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/maroon" />
            >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/webTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:paddingEnd="2dp"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:paddingStart="2dp">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:src="@drawable/web_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/lb_web_page"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/maroon" />
            >
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/langDropDown"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_below="@+id/headerView"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/text_language"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/maroon" />

        <Spinner
            android:id="@+id/spinnerLang"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="end|center"
            android:popupBackground="@color/white"
            android:spinnerMode="dropdown"
            android:textAlignment="viewEnd"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black"
            tools:ignore="RtlCompat" />

    </LinearLayout>

    <TextView
        android:id="@+id/contextLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/langDropDown"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:gravity="start|center"
        android:text="@string/lb_your_text"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/maroon" />

    <EditText
        android:id="@+id/contextEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contextLabel"
        android:layout_margin="5dp"
        android:background="@drawable/bg_text_border"
        android:gravity="start"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:maxHeight="300px"
        android:minHeight="300px"
        android:padding="5dp"
        android:textColor="@color/black"
        tools:ignore="PxUsage" />

    <LinearLayout
        android:id="@+id/ll1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/contextLabel"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="130dp"
        android:padding="2dp">

        <TextView
            android:id="@+id/summarizeTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text_border"
            android:gravity="center"
            android:text="@string/lb_summarize"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/maroon" />

        <TextView
            android:id="@+id/clearTv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/bg_text_border"
            android:gravity="center"
            android:text="@string/clear_text"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/maroon" />

        <ImageView
            android:id="@+id/fullScreenTv"
            android:layout_width="?attr/actionBarSize"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="2dp"
            android:background="@color/maroon"
            android:src="@drawable/max_screen" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll1"
        android:layout_margin="5dp"
        android:background="@drawable/bg_text_border"
        android:scrollbarStyle="insideInset">

        <TextView
            android:id="@+id/summarizeValueTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="start"
            android:padding="2dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:text=""
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/maroon" />
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/transparent"
        android:indeterminate="false"
        android:visibility="gone" />
</RelativeLayout>